Add support for GitLab LFS storage
Fixes #175, #212, #213.

This commit is based on code from #213 by icode.

Co-authored-by: icode <intelligentcodemail@gmail.com>